<resources>
    <!-- APP NAME -->
    <string name="app_name">OasisPlanner</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Calendar</string>
    <string name="title_eventarranger">Notifications</string>
    <string name="title_projects">Projects</string>
    <string name="title_memos">Memos</string>
    <string name="title_analytics">Analytics</string>
    <string name="title_settings">Settings</string>

    <string name="tag_home">Home</string>
    <string name="tag_dashboard">Calendar</string>
    <string name="tag_eventarranger">Events</string>
    <string name="tag_notification">Notifications</string>
    <string name="tag_project">Projects</string>
    <string name="tag_memos">Memos</string>
    <string name="tag_analytics">Analytics</string>
    <string name="tag_settings">Settings</string>

    <string name="tag_header_browse">BROWSE</string>

    <!-- TIPS -->
    <string name="tips_no_home_agendas">There is no pre-assigned tasks yet. \n Add new ones now.</string>
    <string name="tips_no_agendas">There is no calendar entry yet. \n Add new routine now.</string>
    <string name="tips_no_memos">There is no memo notes yet. \n Add new memo notes now.</string>
    <string name="tips_memo_not_found">No results containing all your search terms were found. </string>

    <!-- IMPORTANCE LEVEL -->
    <string name="unimportant">unimportant</string>
    <string name="standard">standard</string>
    <string name="semiimportant">important</string>
    <string name="important">urgent</string>

    <!-- AGENDA TYPES -->
    <string name="type_agenda">AGENDA</string>
    <string name="type_memo">MEMO</string>

    <!-- ACTIVITY TYPES -->
    <string name="notif">reminders</string>
    <string name="activities">activities</string>
    <string name="plan">plan</string>
    <string name="todo">to-do</string>

    <!-- TAG TYPES -->
    <string name="tag_loc">Location</string>
    <string name="tag_subalarm">Alarm Notifications</string>
    <string name="tag_tags">Tags</string>
    <string name="tag_descr">Descriptions</string>

    <!-- FRAGMENTS -->
        <!-- HOME -->
            <string name="home_upcoming">Upcoming Tasks</string>
            <string name="home_upcoming_desc">Recommendations for you</string>
            <string name="home_schedule">Your Schedule</string>
            <string name="home_schedule_desc">Next Event</string>
        <!-- NOTIFICATIONS -->
            <!-- TITLE -->
            <string name="agendas">Upcoming</string>
            <!-- BUTTONS -->
            <string name="add_ent">New Agenda</string>
            <string name="add_ent_quick">Quick Notes</string>

            <!-- NEW AGENDAS -->
            <string name="new_agenda">New Agenda</string>
            <string name="new_task">Quick Reminder</string>
            <string name="new_note">New Note</string>

    <!-- Bars -->
    <string name="bar_notif">Notif</string>
    <string name="bar_task">Task</string>
    <string name="bar_event">Event</string>

    <string name="bar_today"> (Today)</string>

    <!-- Edit _Agenda Dialog / Page -->
        <!-- PAGE OVERHEAD TITLE -->
        <string name="page_overhead_new_agenda">New Agenda</string>
        <string name="page_overhead_edit_agenda">Edit Agenda</string>
        <string name="page_overhead_edit_tag">Edit Tags</string>
        <!-- PAGE BUTTON CONTENTS -->
        <string name="page_confirm">Confirm</string>
        <string name="page_cancel">Cancel</string>
        <!-- DOCUMENT TAGS -->
        <string name="doc_tag">Note</string>
        <string name="event_tag">Event</string>
        <!-- NOT FOUND LABELS -->
        <string name="doc_not_found">(There is no description)</string>
        <string name="section_title_not_found">(Event Title)</string>
        <!-- YELLOW BAR -->
        <string name="yellow_bar_text_collapse">Collapse</string>
        <string name="yellow_bar_text_newevent">New Event</string>
        <string name="yellow_bar_text_delete">Delete Item</string>
        <string name="yellow_bar_text_tag">Edit Tags</string>
        <string name="yellow_bar_tag_delete">Delete Tag</string>
        <!-- OnConfirm -->
        <string name="page_no_title_warning">The title of the agenda cannot be empty!</string>
        <!-- Headers -->
        <string name="edit_agenda_details">Details and Info</string>
        <string name="edit_agenda_events">Related Events</string>

    <!-- General Save -->
    <string name="save_change">You hve unsaved changes. Would you like to save them before exiting?</string>
    <string name="delete">Delete</string>
    <string name="discard">Discard</string>

    <!-- Edit _Alarm Dialog -->
    <string name="page_overhead_edit_alarm">Edit Alarms</string>
    <string name="edit_alarm_type">Alarm Type</string>
    <string name="edit_alarm_importance">Importance Level</string>
        <!-- Tab Bar -->
        <string name="edit_alarm_tab_infos">Infos</string>
        <string name="edit_alarm_tab_dates">Dates</string>
        <string name="edit_alarm_tab_times">Times</string>
        <!-- Type Spinner -->
        <string name="type_spinner_title">Alarm Type</string>
        <string name="importance_spinner_title">Importance</string>
        <string name="tab_date_title">Notif Date: </string>
        <string name="tab_time_title">Notif Time: </string>
        <string name="tab_info_title">Descriptions: </string>
        <string name="tab_tag_title">Tags: </string>
        <string name="tab_tag_content_title">Set Tag Value To: </string>
        <string name="tab_tag_date_title">Alarm At: </string>
        <string name="tab_tag_time_title">With Time: </string>
        <!-- OnConfirm -->
        <string name="tab_no_content_warning">The content of this field cannot be empty!</string>
        <!-- Others -->
        <string name="before">Before</string>

    <!-- Edit _Memo Dialog -->
    <string name="page_overhead_new_memo">New Memo</string>
    <string name="page_overhead_edit_memo">Edit Memo</string>
    <string name="memo_content_title">Content of Your Memo: </string>
    <string name="memo_tag_title">Tags: </string>
    <string name="memo_search">Searching For: </string>
    <string name="memo_delete">Delete Memo</string>
    <string name="memo_delete_confirm">Are you sure you want to delete this memo?</string>

    <!-- NULLITIES -->
    <string name="no_title">[TITLE]</string>
    <string name="no_desc">[CONTENT]</string>

    <!-- WARNINGS -->
    <string name="warning_input_too_long">Tips: You may want to have a shorter name for your activities.</string>
    <string name="warning_protected_apps"> Protected Apps</string>
    <string name="warning_protected_apps_msg">%n%s requires to be enabled in \'Protected Apps\' to function properly. Please switch to manual management in Auto Management and allow automatic startup and background activity.%n</string>

    <!-- PERMISSION WARNING OPTIONS -->
    <string name="options_permission_settings">Go to settings</string>
    <string name="options_permission_do_not_show_again">Do not show again</string>
    <string name="options_permission_close">Close</string>

    <!-- WEEKDAYS -->
    <string-array name="weekdays">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <!-- DATE TYPES -->
    <string-array name="date_types">
        <item>Minutes Before</item>
        <item>Hours Before</item>
        <item>Days Before</item>
        <item>Weeks Before</item>
        <item>Months Before</item>
    </string-array>

    <!-- SETTINGS -->
    <string-array name="settings">
        <item>Permissions</item>
        <item>Volume Settings</item>
        <item>Refresh Alarms</item>
    </string-array>
    <string-array name="settings_dev">
        <item>NOTIF TEST</item>
        <item>REMOVE SKIP ASK USER REQUESTS DIALOG</item>
    </string-array>
    <string name="settings_notifClickSound">Click sound is now turned $1 ,on,off</string>

    <!-- FUNCTIONAL BUTTONS -->
    <string name="show_today">Show Today</string>

</resources>