<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aurora.oasisplanner.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_eventarranger"
        android:name="com.aurora.oasisplanner.fragments.EventArrangerFragment"
        android:label="@string/title_eventarranger"
        tools:layout="@layout/fragment_notifications">
        <deepLink
            android:id="@+id/deepLink"
            app:uri="oasis://oasis.com/notificationfragment" />
        <argument
            android:name="itemId"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/navigation_project"
        android:name="com.aurora.oasisplanner.fragments.ProjectsFragment"
        android:label="@string/title_projects"
        tools:layout="@layout/fragment_project" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.aurora.oasisplanner.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_memos"
        android:name="com.aurora.oasisplanner.fragments.MemosFragment"
        android:label="@string/title_memos"
        tools:layout="@layout/fragment_memos" />

    <fragment
        android:id="@+id/navigation_analytics"
        android:name="com.aurora.oasisplanner.fragments.ProjectsFragment"
        android:label="@string/title_analytics"
        tools:layout="@layout/fragment_project" />

    <fragment
        android:id="@+id/navigation_agendaEditDialog"
        android:name="com.aurora.oasisplanner.presentation.dialog.agendaeditdialog.AgendaEditDialog"
        android:label="@string/page_overhead_edit_agenda">
        <deepLink
            android:id="@+id/deepLink2"
            app:uri="oasis://oasis.com/editalarmdialog" />
    </fragment>

    <fragment
        android:id="@+id/navigation_memoEditDialog"
        android:name="com.aurora.oasisplanner.presentation.dialog.memoeditdialog.MemoEditDialog"
        android:label="@string/page_overhead_edit_memo"/>


</navigation>